resloved overflow issue of table in cos conversion

--- a/src/styles/ElementFigure/ElementFigure.css
+++ b/src/styles/ElementFigure/ElementFigure.css
@@ -75,6 +75,7 @@ h4.figureLabel, h4.figureTitle{
 .figureElement .pearson-component.image.figureData {
     /* cursor:copy!important ; */
     text-align: center;
+    overflow: auto;
 }
 figcaption,.figureCaption{
     font-size: 10.8px!important;
